--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           Instagram
         </a>
       </button>
-		<header class="p">
+		<header class="t">
 		  <h1>More</h1>      
 		</header>
 	  <button class="btn-rounded">
@@ -79,6 +79,9 @@
     </div>
     <div id="rest"></div>
   </main>
+  <footer>
+	<p>&copy; Copyright 2023 || Irmando Koyo.</p>
+  </footer>
 </body>
 </html>
                                                                             
