--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
     </div>
     <div id="rest"></div>
   </main>
+  <div class="copyright_section">
   <footer>
-	<p>&copy; Copyright 2023 || Irmando Koyo.</p>
+	<p class="copyright_text">&copy; Copyright 2023 <a href="https://facebook.com/irmandokoyo">|| Irmando Koyo</a></p>
   </footer>
+  </div>
 </body>
 </html>
                                                                             
